k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eps-digital
  labels:
    app.kubernetes.io/part-of: eps-digital
